src/gateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.ip/proxy-body-size: "0" # set no limits on file size uploads
    nginx.ingress.kubernetes.ip/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.ip/proxy-send-timeout: "600"
spec:
  rules:
    - host: mp3converter.com
      http:
        path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
